# mcpelevator

./: .gitignore  .trivyignore.yaml  AGENTS.md  CLAUDE.md  CONTEXT.md  Dockerfile  Makefile  README.md  docker-compose.yml  renovate.json  shots.yml
.github/: actionlint.yaml  dependabot.yml
.github/workflows/: ci.yml  docker-build.yml  docker-image.yml  screenshots.yml  security-scan.yml
.trivy/: ignore-policy.rego
backend/: pyproject.toml
backend/app/: __init__.py  config.py  main.py  util.py
backend/app/aggregate/: __init__.py  hub.py  route.py
backend/app/api/: auth.py  catalog.py  groups.py  health.py  schemas.py  servers.py  settings.py  tokens.py  users.py  util.py
backend/app/auth/: base.py  bearer.py  control_plane.py  middleware.py  none.py  oauth.py  oauth_flow.py  oauth_store.py  policy.py  principal.py
backend/app/bridge/: host.py
backend/app/catalog/: README.md  __init__.py  base.py  glama.py  mapping.py  official.py  registry.py
backend/app/db/: __init__.py  models.py  repo.py
backend/app/groups/: __init__.py  hub.py  registry.py  route.py
backend/app/proxy/: router.py
backend/app/registry/: service.py  settings.py
backend/app/runners/: __init__.py  base.py  command.py  docker.py  npx.py  remote.py  uvx.py
backend/app/supervisor/: logbuffer.py  ports.py  supervisor.py  unit.py
backend/tests/: conftest.py  stdio_server_fixture.py  test_aggregate.py  test_auth.py  test_bridge_host.py  test_catalog_api.py  test_catalog_mapping.py  test_config.py  test_control_plane.py  test_control_plane_auth.py  test_groups.py  test_health.py  test_idle.py  test_import.py  test_logbuffer.py  test_migrate.py  test_oauth.py  test_oauth_e2e.py  test_oauth_provider.py  test_ownership.py  test_playground.py  test_proxy.py  test_registry.py  test_rest_bridge.py  test_runners.py  test_servers_api.py  test_supervisor.py  test_unit.py  test_users_api.py  test_version.py
docs/: claude-web-exposure.md  security.md  unraid.md
docs/adr/: 0001-bounded-server-activations.md  0002-idle-quiescence-wake-on-request.md
docs/agents/: domain.md  issue-tracker.md
docs/screenshots/: README.md
docs/superpowers/specs/: 2026-06-26-control-plane-auth-design.md
frontend/: README.md  package-lock.json  package.json  svelte.config.js  vite.config.ts
frontend/src/: app.css  test-setup.ts
frontend/src/lib/: api.test.ts  api.ts  auth.test.ts  auth.ts  catalogInstall.ts  host.test.ts  host.ts  install.test.ts  install.ts  oauthPopup.test.ts  oauthPopup.ts  remote.ts  startup.test.ts  startup.ts  toast.svelte.ts  types.ts
frontend/src/lib/components/: CopyButton.svelte  CopyMenu.svelte  HealthDot.svelte  (+12 more)
frontend/src/routes/: +layout.svelte  +layout.ts  +page.svelte
scripts/: docker-entrypoint.sh  screenshots-serve.sh
(+7 files in other folders)
