[project]
name = "mcpelevator"
# Source-metadata version (the importlib fallback in app.__init__ reads this for pip/uv installs
# from source). The published image derives its version from the release tag via MCPE_VERSION —
# see the Dockerfile / .github/workflows/docker-image.yml — so this need only track the dev line.
version = "1.1.0"
description = "Elevate stdio MCP servers into authenticated HTTP endpoints — self-hosted control plane."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.51.0",
    "fastmcp>=3.0",
    "sqlmodel>=0.0.22",
    "pydantic-settings>=2.4",
    "httpx>=0.27",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
testpaths = ["tests"]
