[project]
name = "mcpelevator"
# Source-metadata version (the importlib fallback in app.__init__ reads this for pip/uv installs
# from source). The published image derives its version from the release tag via MCPE_VERSION —
# see the Dockerfile / .github/workflows/docker-image.yml — so this need only track the dev line.
version = "1.1.0"
description = "Elevate stdio MCP servers into authenticated HTTP endpoints — self-hosted control plane."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.51.0",
    "fastmcp>=3.0",
    "sqlmodel>=0.0.22",
    "pydantic-settings>=2.4",
    "httpx>=0.27",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    # starlette.testclient prefers httpx2 (Pydantic's maintained httpx fork) and warns when it
    # falls back to httpx. The app's runtime HTTP client stays on `httpx` above; only the test
    # client needs httpx2, so it lives here.
    "httpx2>=2.7",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
testpaths = ["tests"]
